--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<canvas id='tic_tac_toe'></canvas>
+		<script src='./assets/js/jquery.js'></script>
 		<script src='./assets/js/tic-tac-toe.js'></script>
 	</body>
 </html>
