--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset='utf-8' />
-		<title>Tic-Tac-Toe</title>
+		<title>Jenny's Tic-Tac-Toe</title>
 		<link rel='stylesheet' type='text/css' href='./assets/css/styles.css' />
 	</head>
 	<body>
